[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "CANedge-HTTP"
version = "0.0.2"
authors = [
    { name="CSS Electronics", email="contact@csselectronics.com" },
]
description = "Python module for accessing CANEdge filesystem via HTTP"
readme = "README.md"
license = { text = "MIT" }
keywords = ["CSS Electronics", "CANEdge"]
requires-python = ">=3.7"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
"Homepage" = "https://https://www.csselectronics.com/"

[tool.hatch.version]
source = "vcs"
raw-options = { root="../.." }
