[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "CANedge-HTTP"
version = "0.0.2"
authors = [
    { name="CSS Electronics" },
    { email="contact@csselectronics.com" },
]
description = "Python module for accessing CANEdge filesystem via HTTP"
readme = "README.md"
license = { text = "MIT" }
keywords = ["CSS Electronics", "CANEdge"]
requires-python = ">=3.7"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'requests >= 2.32.3',
]

[project.scripts]
ce_http_downloader = "canedge_http.tools.tool_download_log_files:main"

[project.urls]
"Homepage" = "https://www.csselectronics.com/"

[tool.hatch.version]
source = "vcs"
raw-options = { root="../.." }
